feat: update to version 1.5.10, enhance bot chat realism, and fix AI state cleanup